logs/jalon.theme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jalon'...
Listing './lib/python3.5/site-packages/jalon/theme'...
Listing './lib/python3.5/site-packages/jalon/theme/browser'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/css'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/fonts'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/images'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/images'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/lang'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/patterns'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/patterns/black'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/patterns/chalk'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/patterns/white'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/plugins'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/plugins/dataloader'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/plugins/export'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/plugins/responsive'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/amcharts/themes'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/lang'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/base64image'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/clipboard'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/dialog'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/link'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/pastefromword'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/plugins/specialchar'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/skins'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/scripts/ckeditor/skins/moono'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_forum_template'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template/jalon_course'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template/jalon_properties'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template/my_courses'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template/my_space'...
Listing './lib/python3.5/site-packages/jalon/theme/browser/view_template/my_students'...
Listing './lib/python3.5/site-packages/jalon/theme/locales'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/en'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/fr'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/zh_CN'...
Listing './lib/python3.5/site-packages/jalon/theme/locales/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jalon/theme/profiles'...
Listing './lib/python3.5/site-packages/jalon/theme/profiles/default'...
Listing './lib/python3.5/site-packages/jalon/theme/skins'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_configuration'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_connexion'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_course'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_forum'...
Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_forum/forum_add.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_forum/forum_add.py", line 19
    return context.absolute_url()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_forum/forum_edit.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_forum/forum_edit.py", line 33
    return redirection
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general'...
Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/JSBuffer.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/JSBuffer.py", line 82
    return jsBuffer
                  ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/JSTranslate.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/JSTranslate.py", line 48
    return newJsTranslate
                        ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/getAuthenticatedName.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/getAuthenticatedName.py", line 14
    return member.getProperty("fullname")
                                        ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/getTopBarFile.py'...
***   File "./lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_general/getTopBarFile.py", line 27
    return "top_bar_%s" % roles[0].lower()
                                         ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_my_courses'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_my_space'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_my_space_wims_createxo'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_my_students'...
Listing './lib/python3.5/site-packages/jalon/theme/skins/jalon_theme_unauthorized_template'...
Listing './lib/python3.5/site-packages/jalon.theme-3.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
